more data cleaning

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "81da00e7-66f2-46ab-97e9-9d4a80494a93",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "1c5c2846-9499-4db4-81e3-281fbc7637a1",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "4      NaN       1200   2.0      1.0   51.00  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "8390d1b2-1a38-4b2c-a46b-0d0d85b69c0a",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "(13320, 9)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "1bd2f4e1-3b09-41a4-9cc5-226e9c9f9100",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "5eff6c47-65be-4d10-8d35-7a7b08c94bab",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "3bfaca94-0e5c-4916-8844-0845b6d38bc0",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "4                  Kothanur      2 BHK       1200   2.0   51.00"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "7239c876-b18c-438a-b694-3804f3e05017",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "2a1f34de-46d7-452f-b9ab-03f234e566a1",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "0c04c183-5934-41b7-affc-c592062e9dbe",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
        "(13246, 5)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "cb661751-97b8-474c-b038-3ec11315e2b6",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
        "       '12 Bedroom', '13 BHK', '18 Bedroom'], dtype=object)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "882629fb-04d9-4896-b309-404028c9be73",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jaint\\AppData\\Local\\Temp\\ipykernel_1232\\2090320225.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\jaint\\AppData\\Local\\Temp\\ipykernel_10980\\2090320225.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "615aafea-c67c-45d4-8f4d-24a464fb7be1",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "4                  Kothanur      2 BHK       1200   2.0   51.00   2"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "bf08ef43-f405-489d-ac94-b998c510c3db",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "bc690f72-9584-4979-b153-8974fe70880f",
    "metadata": {},
    "outputs": [],
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "5a505b9b-9a68-4f41-a33e-57c957b00d2c",
    "metadata": {},
    "outputs": [
@@ -690,7 +690,7 @@
        "672        Bettahalsoor  4 Bedroom     3090 - 5002   4.0  445.000   4"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "de1e6a39-bf9b-4878-95d3-a871af28dd88",
    "metadata": {},
    "outputs": [],
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "05fadd19-3fbf-4996-8203-8f3616a5916b",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
        "2166.0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "id": "30320416-389a-421f-94ee-f232d1c9cf17",
    "metadata": {},
    "outputs": [
@@ -749,7 +749,7 @@
        "1317.5"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "id": "54a47246-4d49-489a-9847-1d3145b65a26",
    "metadata": {},
    "outputs": [],
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "id": "7638e391-4bf5-45bb-b6d9-9920f588ef27",
    "metadata": {},
    "outputs": [
@@ -913,7 +913,7 @@
        "9              Gandhi Bazar  6 Bedroom      1020.0   6.0  370.00   6"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "969ea2b2-881a-404a-ae24-3bdc88f71384",
    "metadata": {},
    "outputs": [
@@ -940,7 +940,7 @@
        "Name: 30, dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "id": "5321d968-7529-47a7-b492-f2743d5c0253",
    "metadata": {},
    "outputs": [
@@ -967,7 +967,7 @@
        "Name: 410, dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,8 +978,359 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "0742de3b-1534-4dec-a661-fdd613ef6162",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>price</th>\n",
+       "      <th>BHK</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Electronic City Phase II</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1056.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>39.07</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Chikka Tirupathi</td>\n",
+       "      <td>4 Bedroom</td>\n",
+       "      <td>2600.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>120.00</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Uttarahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1440.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>62.00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lingadheeranahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1521.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kothanur</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>51.00</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   location       size  total_sqft  bath   price BHK\n",
+       "0  Electronic City Phase II      2 BHK      1056.0   2.0   39.07   2\n",
+       "1          Chikka Tirupathi  4 Bedroom      2600.0   5.0  120.00   4\n",
+       "2               Uttarahalli      3 BHK      1440.0   2.0   62.00   3\n",
+       "3        Lingadheeranahalli      3 BHK      1521.0   3.0   95.00   3\n",
+       "4                  Kothanur      2 BHK      1200.0   2.0   51.00   2"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e40882ff-7fd0-46be-8369-95af07cea743",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>total_sqft</th>\n",
+       "      <th>bath</th>\n",
+       "      <th>price</th>\n",
+       "      <th>BHK</th>\n",
+       "      <th>price_per_sqft</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Electronic City Phase II</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1056.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>39.07</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3699.810606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Chikka Tirupathi</td>\n",
+       "      <td>4 Bedroom</td>\n",
+       "      <td>2600.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>120.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4615.384615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Uttarahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1440.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>62.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4305.555556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lingadheeranahalli</td>\n",
+       "      <td>3 BHK</td>\n",
+       "      <td>1521.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>95.00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6245.890861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kothanur</td>\n",
+       "      <td>2 BHK</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>51.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4250.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   location       size  total_sqft  bath   price BHK  \\\n",
+       "0  Electronic City Phase II      2 BHK      1056.0   2.0   39.07   2   \n",
+       "1          Chikka Tirupathi  4 Bedroom      2600.0   5.0  120.00   4   \n",
+       "2               Uttarahalli      3 BHK      1440.0   2.0   62.00   3   \n",
+       "3        Lingadheeranahalli      3 BHK      1521.0   3.0   95.00   3   \n",
+       "4                  Kothanur      2 BHK      1200.0   2.0   51.00   2   \n",
+       "\n",
+       "   price_per_sqft  \n",
+       "0     3699.810606  \n",
+       "1     4615.384615  \n",
+       "2     4305.555556  \n",
+       "3     6245.890861  \n",
+       "4     4250.000000  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df5 = df4.copy()\n",
+    "df5[\"price_per_sqft\"] = (df5[\"price\"] * 100000) / (df5[\"total_sqft\"])\n",
+    "df5.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "bf6361a3-0f50-4561-9d83-76f8bae914b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1304"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df5.location.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8188ecde-8689-447b-a54a-9696b544cd0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df5.location = df5.location.apply(lambda x : x.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "a629d763-df0e-45f0-8133-3e215fd47e1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "location\n",
+       "Whitefield                        535\n",
+       "Sarjapur  Road                    392\n",
+       "Electronic City                   304\n",
+       "Kanakpura Road                    266\n",
+       "Thanisandra                       236\n",
+       "                                 ... \n",
+       "Vasantapura main road               1\n",
+       "Bapuji Layout                       1\n",
+       "1st Stage Radha Krishna Layout      1\n",
+       "BEML Layout 5th stage               1\n",
+       "Abshot Layout                       1\n",
+       "Name: count, Length: 1293, dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "location_stats = df5[\"location\"].value_counts()\n",
+    "location_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "bec9429f-476b-4539-b9fc-a94439dcc3e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jaint\\AppData\\Local\\Temp\\ipykernel_10980\\2710526354.py:3: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  len(location_stats[location_stats]<=10)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1293"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# location with less 10 houses will be under \"others\"\n",
+    "\n",
+    "len(location_stats[location_stats]<=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "1c99f900-ec97-4301-8cab-c789a4be887d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "location\n",
+       "Naganathapura                     10\n",
+       "Sadashiva Nagar                   10\n",
+       "Nagappa Reddy Layout              10\n",
+       "BTM 1st Stage                     10\n",
+       "Sector 1 HSR Layout               10\n",
+       "                                  ..\n",
+       "Vasantapura main road              1\n",
+       "Bapuji Layout                      1\n",
+       "1st Stage Radha Krishna Layout     1\n",
+       "BEML Layout 5th stage              1\n",
+       "Abshot Layout                      1\n",
+       "Name: count, Length: 1052, dtype: int64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "location_stats_less_than_10 = location_stats[location_stats<=10]\n",
+    "location_stats_less_than_10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "505c22be-170f-4527-aaea-2a879f669855",
    "metadata": {},
    "outputs": [],
    "source": []
